--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>extentreports</artifactId>
             <version>5.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
