added program in array

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,9 @@ password=your_amazon_password
 loginRequired=false
 retryCount=0
 browser=chrome
+uatServiceAccount=ajio-uat-service-account
+prodServiceAccount=ajio-prod-service-account
+uatProjectId=ajio-uat
+prodProjectId=ajio-web
+uatEnv=uat62
+prodEnv=production
